# hydra

./: ._LICENSE  ._last.txt  ._second-last.txt  .gitignore  TODO.md  equestria-status-serverinfo  flake.nix  history.json  main.js  node.js  notifications.js  package-lock.json  package.json  shell.nix
.github/workflows/: build_statusng.yml  codeql.yml
client/: .vercelignore  app.js  build.sh  index.html  index.php  tsconfig.json  vercel.json
client/src/: Config.ts  Log.ts  config.js  (+15 more)
new/: app.js  index.html  style.css  vercel.json
pages/: 500.html  501.html  502.html  503.html  504.html
public/: app.js  vercel.json
public2/: app.js  build.sh  index.html  index.php  style.css  vercel.json
statusng/: Cargo.toml  rust-toolchain.toml
statusng/src/: app.rs  config.rs  error.rs  export.rs  history.rs  lib.rs  main.rs  models.rs  processors.rs
statusng/src/config/: address.rs  base.rs  history.rs  http.rs  services.rs  status.rs  tcp.rs
statusng/src/config/tests/: address.rs  services.rs
statusng/src/export/: mini_history.rs  private.rs  private_api.rs  private_service.rs  public.rs  public_api.rs  vercel.rs
statusng/src/export/private/: breakdown.rs  service.rs
statusng/src/export/public/: v1.rs  v2.rs
statusng/src/models/: config.rs  history.rs  service.rs
statusng/src/models/service/: kind.rs  processor.rs  status.rs
statusng/src/models/service/kind/: http.rs  icmp.rs  tcp.rs
statusng/src/processors/: http.rs  tcp.rs
statusng/src/processors/tests/: http.rs  tcp.rs
statusng/src/tests/: processors.rs
web/: content.ejs  page.ejs  page2.ejs
(+13 files in other folders)
