[package]
name = "statusng"
version = "3.0.3"
edition = "2021"

[dependencies]
log = "0.4.22"
simple_logger = "5.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
serde_yml = "0.0.10"
serde_repr = "0.1.19"
ureq = "2.9.7"
chrono = { version = "0.4.38", features = ["serde"] }
md5 = "0.7.0"
