[package]
name = "statusng"
version = "4.0.1"
edition = "2021"

[dependencies]
log = "0.4.22"
simple_logger = "5.0.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
serde_yml = "0.0.11"
serde_repr = "0.1.19"
ureq = "2.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
md5 = "0.7.0"
toml = "0.8.19"
dns-lookup = "2.0.4"
